--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
-  <title>Jedlik Vue.js Vuerify Router Starter</title>
+  <title>LMS keretrendszerek - Kérdőív 2</title>
 </head>
 
 <body>
